# cyberdaily

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: daily.yml
config/: sources.yaml
src/: cache.py  models.py  pipeline.py
src/collector/: __main__.py  collect.py  fetch.py  sources.py
src/publisher/: __main__.py  render.py
src/ranker/: __main__.py  prompt.md  prompt_ai.md  rank.py
src/translator/: __main__.py  prompt.md  translate.py
templates/: index.html.j2
tests/: test_collect.py  test_fetch.py  test_publisher.py  test_ranker.py  test_sources.py  test_translator.py
tests/fixtures/: sample_feed.xml
