[project]
name = "cyberdaily"
version = "0.1.0"
description = "Daily top 5 cybersecurity news — Claude-ranked, static site"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.10",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
